0x01-react_intro/task_1/dashboard/src/op

> dashboard@0.1.0 start
> react-scripts start

Starting the development server...

Failed to compile.

[eslint] 
src/utils.js
Syntax error: Unexpected token (3:15) (3:15)
ERROR in ./src/utils.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /root/alx-react/0x01-react_intro/task_1/dashboard/src/utils.js: Unexpected token (3:15)

  1 | let util;
  2 | class Utils{
> 3 | getFullYear = () {
    |                ^
  4 |   return('2024');
  5 | }
  6 | getFooterCopy = (isIndex) {
    at constructor (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:353:19)
    at FlowParserMixin.raise (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:3277:19)
    at FlowParserMixin.unexpected (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:3297:16)
    at FlowParserMixin.parseParenAndDistinguishExpression (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:11216:12)
    at FlowParserMixin.parseParenAndDistinguishExpression (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5728:18)
    at FlowParserMixin.parseExprAtom (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10857:23)
    at FlowParserMixin.parseExprAtom (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:6821:20)
    at FlowParserMixin.parseExprSubscripts (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10590:23)
    at FlowParserMixin.parseUpdate (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10573:21)
    at FlowParserMixin.parseMaybeUnary (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10551:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10405:61)
    at FlowParserMixin.parseExprOps (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10410:23)
    at FlowParserMixin.parseMaybeConditional (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10387:23)
    at FlowParserMixin.parseMaybeAssign (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10348:21)
    at FlowParserMixin.parseMaybeAssign (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5686:18)
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10318:39
    at FlowParserMixin.allowInAnd (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:11931:16)
    at FlowParserMixin.parseMaybeAssignAllowIn (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:10318:17)
    at FlowParserMixin.parseInitializer (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13229:38)
    at FlowParserMixin.parseClassProperty (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13216:10)
    at FlowParserMixin.parseClassProperty (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5383:18)
    at FlowParserMixin.pushClassProperty (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13177:30)
    at FlowParserMixin.parseClassMemberWithIsStatic (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13089:14)
    at FlowParserMixin.parseClassMember (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13034:10)
    at FlowParserMixin.parseClassMember (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5296:11)
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12988:14
    at FlowParserMixin.withSmartMixTopicForbiddingContext (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:11913:14)
    at FlowParserMixin.parseClassBody (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12970:10)
    at FlowParserMixin.parseClass (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12948:22)
    at FlowParserMixin.parseStatementContent (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12266:21)
    at FlowParserMixin.parseStatementLike (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12239:17)
    at FlowParserMixin.parseStatementLike (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5055:24)
    at FlowParserMixin.parseModuleItem (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12216:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12796:36)
    at FlowParserMixin.parseBlockBody (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12789:10)
    at FlowParserMixin.parseProgram (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12116:10)
    at FlowParserMixin.parseTopLevel (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:12106:25)
    at FlowParserMixin.parseTopLevel (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:5822:28)
    at FlowParserMixin.parse (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13905:10)
    at parse (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/parser/lib/index.js:13947:38)
    at parser (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/transformation/index.js:21:50)
    at run.next (<anonymous>)
    at transform (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:261:32)
    at /root/alx-react/0x01-react_intro/task_1/dashboard/node_modules/gensync/index.js:273:13

ERROR in [eslint] 
src/utils.js
  Line 3:15:  Parsing error: Unexpected token (3:15)

webpack compiled with 2 errors
